# CS787

DDPM/: evaluate_diffusion.py  main.py  pyproject.toml  requirements.txt  sample_diffusion.py  train.py  train_diffusion.py  train_diffusion_finetune.py
DDPM/data/: dataset.py  prepare_data.py  test_dataset.py
DDPM/models/: diffusion.py  model.py
DDPM/models/diffusion/: ddpm_adapter.py  ema.py  simple_ddpm.py  style_encoder.py  unet_small.py
DDPM/runs/ddpm_finetune/: events.out.tfevents.1763037602.kshitijbagga.34812.0  events.out.tfevents.1763037762.kshitijbagga.20568.0
DDPM/util/: image_utils.py  page_renderer.py  process.py  util.py
DDPM/util/models/: model.py
Handwriting_Transformers/: demo.ipynb  demo_custom_handwriting.ipynb  mytext.txt  params.py  train.py
Handwriting_Transformers/.ipynb_checkpoints/: demo_custom_handwriting-checkpoint.ipynb  params-checkpoint.py  test-checkpoint.py  train-checkpoint.py
Handwriting_Transformers/models/: curve_tokenizer.py  inception.py  model.py
Handwriting_Transformers/wandb/latest-run/: run-pg0knc59.wandb
Handwriting_Transformers/wandb/offline-run-20251006_191626-gn8kcddw/: run-gn8kcddw.wandb
Handwriting_Transformers/wandb/offline-run-20251006_191626-gn8kcddw/files/: requirements.txt
Handwriting_Transformers/wandb/run-20251006_192815-cnpr809r/: run-cnpr809r.wandb
