[project]
name = "handwriting-transformers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations==1.3.1",
    "einops==0.8.0",
    "future==1.0.0",
    "imgaug==0.4.0",
    "lmdb==1.4.1",
    "matplotlib==3.9.0",
    "numpy<2",
    "pillow==10.3.0",
    "psutil==5.9.8",
    "python-levenshtein==0.25.1",
    "pyyaml==6.0.1",
    "regex==2024.5.15",
    "scikit-image==0.24.0",
    "scikit-learn==1.5.0",
    "scipy==1.13.1",
    "seaborn==0.13.2",
    "tensorboard==2.16.2",
    "tqdm==4.66.4",
]
